共有メモリ用のマップを追加。

--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="SharedMemory.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="Win32Data.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Client.cpp">
@@ -48,6 +51,9 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="SharedMemory.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Win32Data.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
