--- a/HostWin32Test/HostWin32Test.csproj
+++ b/HostWin32Test/HostWin32Test.csproj
@@ -50,7 +50,7 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="YKToolkit.Controls">
-      <HintPath>\\te22w433\開発業務\共有モジュール\WPF\YKToolkit.Controls\YKToolkit.Controls.dll</HintPath>
+      <HintPath>..\..\..\YKSoftware\YKToolkit.Controls\YKToolkit.Controls\bin\Beta Release\YKToolkit.Controls.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
