--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="TestView.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="define.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Client.cpp">
